--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -44,7 +44,7 @@
                     <label for="selectUser1">Seleccionar usuario de la orden que desea filtrar</label><br>
                     <select id="selectUser1" class="inputBox"> </select>
                 </div>
-                <button class="submit-btn-products" id="submit-btn">Buscar Orden</button>
+                <button class="submit-btn-products" id="submit-btn" onclick="obtenerOrdenUsuario(`${selectUser1.value}`)">Buscar Orden</button>
                 
                 <div class="container">
 
