--- a/scss/pages/_admin-user.scss
+++ b/scss/pages/_admin-user.scss
@@ -33,6 +33,14 @@ body {
     border: none;
     height: 1.5rem;
 }
+.inputBoxUser{
+    width: 20rem;
+    border-radius: 0.3rem;
+    border: none;
+    height: 1.5rem;
+    background-color: rgb(224, 222, 222);
+    margin: 0.3rem 0 1rem 0 ;
+}
 
 .inputBoxText{
     width: 20rem;
