--- a/scss/pages/_admin-orders.scss
+++ b/scss/pages/_admin-orders.scss
@@ -7,3 +7,40 @@
     }
 
 }
+
+
+.submit-btn:hover{
+    background-color: rgb(1, 105, 1);
+}
+
+.inputBoxUser{
+    margin-left: 0rem;
+}
+.inputBoxUserLabel{
+    margin-left: 0rem;
+}
+
+.submit-btn-orders {
+    padding: .5rem 1rem;
+    width: 20rem;
+    height:2rem;
+    border: 2px solid rgb(51, 87, 2);
+    color: white;
+    background-color: #c3a343;
+    border-radius: 8px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+}
+
+.adminContainerOrder{
+    padding-top: 2rem;
+    margin: 1rem 0rem 2rem  1rem ;
+}
+.adminContainerOrder1{
+    padding-top: 2rem;
+    margin: 0rem 0rem 0rem  1rem;
+}
+
