--- a/scss/pages/_admin-orders.scss
+++ b/scss/pages/_admin-orders.scss
@@ -34,6 +34,21 @@
     margin-bottom: 1rem;
     margin-left: 0rem;
 }
+.submit-btn-orders1 {
+    margin-top: 1rem;
+    padding: .5rem 1rem;
+    width: 20rem;
+    height:2rem;
+    border: 2px solid rgb(51, 87, 2);
+    color: white;
+    background-color: #c3a343;
+    border-radius: 8px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    margin-left:-1rem;
+}
 
 .adminContainerOrder{
     padding-top: 2rem;
@@ -44,3 +59,50 @@
     margin: 0rem 0rem 0rem  1rem;
 }
 
+.containerOrder {
+    // background-color: #c3a343;
+    display: flex;
+    flex-direction: column;    
+    /* padding: 2rem;
+    border: 3px solid salmon; */
+}
+
+.product-form-order {
+
+    // background-color: #c3a343;
+    margin-top: 1rem !important;
+    display: flex;
+    flex-direction: column;
+    padding: 0rem 1rem 0rem 1rem;
+    border: 0px solid salmon;
+    margin:     1px;
+}
+
+.inputBoxOrder{
+    width: 20rem;
+    border-radius: 0.3rem;
+    border: none;
+    height: 1.5rem;
+    background-color:white;
+    margin: 0.3rem 0 1rem 0 ;
+}
+
+.inputBoxOrder1{
+    width: 20rem;
+    border-radius: 0.3rem;
+    border: none;
+    height: 1.5rem;
+    background-color:white;
+    margin: 0.3rem 0 1rem 0 ;
+    padding-left: -1rem !important;
+}
+
+.inputBoxOrderPrice{
+    width: 17rem;
+    border-radius: 0.3rem;
+    border: none;
+    height: 1.5rem;
+    background-color:white;
+    margin: 0.3rem 0 1rem 0 ;
+    padding-left: -1rem !important;
+}
