--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,8 +40,7 @@ body {
 .card__img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .card {
@@ -61,8 +60,7 @@ body {
 .card__img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .card__body {
   display: flex;
@@ -478,8 +476,7 @@ body {
     width: 12rem;
     display: flex;
     justify-content: space-evenly;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 }
 .main {
@@ -653,8 +650,7 @@ body {
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   background-color: brown;
   border: 1px solid 0;
 }
@@ -1106,8 +1102,7 @@ body {
   .imageAboutUs {
     height: 15.4rem;
     justify-content: center;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   .section-info__title-container {
     display: flex;
@@ -1328,8 +1323,7 @@ body {
 
 .product__img {
   width: 50px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 50px;
   border-radius: 50%;
   display: block;
@@ -1669,8 +1663,7 @@ body {
 
 .user__img {
   width: 50px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 50px;
   border-radius: 50%;
   display: block;
@@ -1969,8 +1962,7 @@ body {
 
 .order__img {
   width: 50px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   height: 50px;
   border-radius: 50%;
   display: block;
@@ -2308,6 +2300,22 @@ body {
   margin-left: 0rem;
 }
 
+.submit-btn-orders1 {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+  width: 20rem;
+  height: 2rem;
+  border: 2px solid rgb(51, 87, 2);
+  color: white;
+  background-color: #c3a343;
+  border-radius: 8px;
+  border: 0;
+  cursor: pointer;
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  margin-left: -1rem;
+}
+
 .adminContainerOrder {
   padding-top: 2rem;
   margin: 1rem 0rem 2rem 1rem;
@@ -2316,4 +2324,49 @@ body {
 .adminContainerOrder1 {
   padding-top: 2rem;
   margin: 0rem 0rem 0rem 1rem;
-}/*# sourceMappingURL=main.css.map */
+}
+
+.containerOrder {
+  display: flex;
+  flex-direction: column;
+  /* padding: 2rem;
+  border: 3px solid salmon; */
+}
+
+.product-form-order {
+  margin-top: 1rem !important;
+  display: flex;
+  flex-direction: column;
+  padding: 0rem 1rem 0rem 1rem;
+  border: 0px solid salmon;
+  margin: 1px;
+}
+
+.inputBoxOrder {
+  width: 20rem;
+  border-radius: 0.3rem;
+  border: none;
+  height: 1.5rem;
+  background-color: white;
+  margin: 0.3rem 0 1rem 0;
+}
+
+.inputBoxOrder1 {
+  width: 20rem;
+  border-radius: 0.3rem;
+  border: none;
+  height: 1.5rem;
+  background-color: white;
+  margin: 0.3rem 0 1rem 0;
+  padding-left: -1rem !important;
+}
+
+.inputBoxOrderPrice {
+  width: 17rem;
+  border-radius: 0.3rem;
+  border: none;
+  height: 1.5rem;
+  background-color: white;
+  margin: 0.3rem 0 1rem 0;
+  padding-left: -1rem !important;
+}
