--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -70,10 +70,10 @@
                         </div>
                     </div>
                     <form id="edit-order" class="product-form-order" onsubmit="editStatusOrder(event)">
-                        <div class="input-box">
+                        <!-- <div class="input-box">
                             <label for="priceOrder" >Precio</label>
                             <input type="number" name="price" id="priceOrder" class="inputBoxOrderPrice">
-                        </div>
+                        </div> -->
                         <div class="admin-user-form__form-items">
                             <label for="StatusOrder" class="inputBoxUserLabel">Status</label><br>
                             <select name="status" id="StatusOrder"  class="inputBoxOrder1" required>
@@ -91,7 +91,7 @@
                         </div> -->
 
 
-                        <button type="submit" class="submit-btn-orders1" id="submit-btn">Modificar Status</button>
+                        <button type="submit" class="submit-btn-orders1" id="submit-btn">Modificar Orden</button>
                     </form>
                 </div>
             </div>
