--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -60,6 +60,7 @@
                                         <th>ID de orden</th>
                                         <th>Precio Total</th>
                                         <th>Cantidad de Productos</th>
+                                        <th>Fecha de Creacion</th>
                                         <th>Status</th>
                                         <th>Acciones</th>
                                     </tr>
@@ -118,9 +119,11 @@
                         <script src="/js/loginUserAvatar.js"></script>
                         <script src="/js/filter.js"></script>
                         <script src="/js/btnBuy.js"></script>
+                        <script src="/js/isAdmin.js"></script>
                         <!-- <script src="/js/orderFinal.js"></script> -->
                         <script src="/js/orderFinalMongoDB.js"></script>
                         <script src="/js/adminOrders.js"></script>
+                        <script src="/js/date.js"></script>
                         <!-- <script src="/js/users.js"></script> -->
 
 
