--- a/scss/pages/_admin-orders.scss
+++ b/scss/pages/_admin-orders.scss
@@ -5,6 +5,12 @@
         text-align: center;
 
     }
+    &__orderPrice{
+        width: 10%;
+        text-align: center;
+        font-weight: bold;
+
+    }
 
 }
 
