--- a/scss/pages/_admin-orders.scss
+++ b/scss/pages/_admin-orders.scss
@@ -55,6 +55,21 @@
     margin-bottom: 1rem;
     margin-left:-1rem;
 }
+.submit-btn-orders2 {
+    margin-top: 0;
+    padding: .5rem 1rem;
+    width: 20rem;
+    height:2rem;
+    border: 2px solid rgb(51, 87, 2);
+    color: white;
+    background-color: #c3a343;
+    border-radius: 8px;
+    border: 0;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    margin-left:0;
+}
 
 .adminContainerOrder{
     padding-top: 2rem;
@@ -64,13 +79,28 @@
     padding-top: 2rem;
     margin: 0rem 0rem 0rem  1rem;
 }
+.dminContainerOrderID{
+    padding-top: 2rem;
+    margin: 0rem 0rem 0rem  1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: aquamarine;
+}
 
 .containerOrder {
+    padding-top: 2rem;
+    margin: 1rem 0rem 2rem  1rem ;
     // background-color: #c3a343;
-    display: flex;
-    flex-direction: column;    
+    // display: flex;
+    // flex-direction: column;    
     /* padding: 2rem;
     border: 3px solid salmon; */
+}
+.input-box-order{
+    display: flex;
+    flex-direction: column;   
+    // background-color: #c3a343;
+    margin: 1rem 0rem 2rem  1rem ;
 }
 
 .product-form-order {
@@ -79,9 +109,9 @@
     margin-top: 1rem !important;
     display: flex;
     flex-direction: column;
-    padding: 0rem 1rem 0rem 1rem;
+    // padding: 0rem 1rem 0rem 1rem;
     border: 0px solid salmon;
-    margin:     1px;
+    // margin:     1px;
 }
 
 .inputBoxOrder{
