buscar orden por ID

--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -96,9 +96,8 @@
 
                 <div class="input-box-order">
                     <label for="stockLabel">Obtener orden por ID</label>
-                    <input  name="stock" id="stockLabel" class="inputBoxOrder1" >
-                    <button class="submit-btn-orders" id="submit-btn"
-                    onclick="obtenerOrdenUsuario(`${selectUser1.value}`)">Buscar</button>
+                    <input  name="stock" id="orderID" class="inputBoxOrder1" >
+                    <button class="submit-btn-orders" id="submit-btn"onclick="obtenerOrdenID(`${orderID.value}`)">Buscar</button>
                 </div>
             </div>
 
