terminado busqueda por ID

--- a/views/admin-orders.ejs
+++ b/views/admin-orders.ejs
@@ -100,8 +100,26 @@
                     <button class="submit-btn-orders" id="submit-btn"onclick="obtenerOrdenID(`${orderID.value}`)">Buscar</button>
                 </div>
             </div>
+            <div class="container">
+            <div class="table-container">
+                <table class="table-product">
+                    <thead>
+                        <tr>
+                            <th>Imagen</th>
+                            <th>Producto</th>
+                            <th>Descripción</th>
+                            <th>Cantidad</th>
+                            <th>Precio</th>
+                        </tr>
+                    </thead>
+                    <tbody id="table-body-orderID">
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
-            </main>
+
+
 
 
 
